--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
         <pre>
 Call me on: +91 9380545669
 Mail me on: arnabmondal0402@gmail.com
-Git-Hub: <a href="https://github.com/" target="_blank">https://github.com/</a>
+Git-Hub: <a href="https://github.com/D-ArnabM" target="_blank">https://github.com/D-ArnabM</a>
         </pre>
 
     </main>
